--- a/css/style.css
+++ b/css/style.css
@@ -763,7 +763,8 @@ form label {
     margin-bottom: 10px;
 }
 
-.day2b label {
+.day2b label,
+.lbld2 {
     background-color: #2e5870;
 }
 
@@ -781,7 +782,7 @@ input[type='radio'] {
 
 .lbld1,
 .lbld2 {
-    background-color: #8b8b8b;
+    /* background-color: #8b8b8b; */
     transition: all .2s ease;
     display: flex;
     justify-content: center;
@@ -797,8 +798,11 @@ input[type='radio'] {
 
 #day1:checked~.days .lbld1,
 #day2:checked~.days .lbld2 {
-
-    background-color: #cc050c;
+    /* background-color: #cc050c; */
     width: 70px;
-
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
 }
