--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
     }
 }
 
-@media (min-width:950px) {
+@media (min-width:960px) {
     .container {
         width: 930px;
     }
@@ -79,7 +79,8 @@ body {
     list-style: none;
 }
 
-.header .links .bars {
+.header .links .bars,
+.swit:checked::after {
     position: relative;
     display: block;
     padding: 5px;
@@ -337,13 +338,15 @@ h1 {
 }
 
 .forumAgenda .container {
-    /* overflow: hidden; */
+    overflow: hidden;
+    position: relative;
+    height: 530px;
 }
 
 .forumAgenda .nsubContainer {
     padding: 5px 20px;
-    display: none;
-
+    display: flex;
+    position: absolute;
     flex-direction: column;
     flex-wrap: wrap;
     gap: 0px 50px;
@@ -404,13 +407,30 @@ h1 {
 
 }
 
+.our-partners .subContainer {
+    gap: 5px 2px;
+}
+
 .partner-card {
     border: #203947 solid 1px;
+    width: 49%;
+    height: 112px;
+    overflow: hidden;
+}
+
+@media (min-width:470px) {
+    .our-partners .subContainer {
+        gap: 20px;
+    }
+
+    .partner-card {
+        width: 200px;
+    }
 }
 
 .partner-card img {
-    width: 200px;
-    height: 110px;
+    width: 100%;
+    height: 100%;
 }
 
 .footer {
@@ -549,27 +569,56 @@ h1 {
 
 .register:checked+.frmContainer {
     display: block;
+    animation: frmanime .4s forwards;
+    -webkit-animation: frmanime .4s forwards;
+}
+
+/* .register:checked+.frmContainer form {} */
+
+@keyframes frmanime {
+    0% {
+        transform: scale(0.6);
+        -webkit-transform: scale(0.6);
+        -moz-transform: scale(0.6);
+        -ms-transform: scale(0.6);
+        -o-transform: scale(0.6);
+    }
+
+    50% {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
 }
 
 .register:checked {
     top: 2.5%;
-    left: 40%;
+    left: 50%;
+    transform: translate(-50%, 0%);
     height: 30px;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    -webkit-transform: translate(-50%, 0%);
+    -moz-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    -o-transform: translate(-50%, 0%);
 }
 
-@media (min-width: 750px) {
-    .register:checked {
 
-        left: 46%;
 
-    }
-
-}
 
 .register::after {
     content: "REGISTER";
@@ -582,7 +631,7 @@ h1 {
 .navmenu {
     width: 100%;
     height: 100vh;
-    background-color: #203947;
+    background-color: rgba(0, 0, 0, 0.83);
     position: fixed;
     top: 80px;
     left: 0;
@@ -601,6 +650,37 @@ h1 {
 
 .swit:checked+.navmenu {
     display: block;
+    transform-origin: 0px 0px;
+    animation: showmenuanime .3s forwards;
+    -webkit-animation: showmenuanime .3s forwards;
+}
+
+
+@keyframes showmenuanime {
+    0% {
+        transform: scaleY(0.2);
+        -webkit-transform: scaleY(0.2);
+        -moz-transform: scaleY(0.2);
+        -ms-transform: scaleY(0.2);
+        -o-transform: scaleY(0.2);
+    }
+
+    100% {
+        transform: scaleY(1);
+        -webkit-transform: scaleY(1);
+        -moz-transform: scaleY(1);
+        -ms-transform: scaleY(1);
+        -o-transform: scaleY(1);
+    }
+}
+
+.swit:checked::after {
+    content: "X";
+    box-sizing: border-box;
+    color: white;
+    font-size: 19px;
+    padding: 4px;
+    padding-left: 7px;
 }
 
 .navmenu>ul {
@@ -662,14 +742,20 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 0px 1px;
-    position: relative;
-    top: -5px;
-
+    position: absolute;
+    bottom: 1px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
 }
 
 form {
     padding: 20px;
-    /* height: 80vh; */
+    /*height: 80vh;
+    */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -684,20 +770,39 @@ form {
     -o-border-radius: 15px;
     position: fixed;
     z-index: 100;
-    top: 4%;
-    left: 5%;
+    top: 4.2%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
+    -moz-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    -o-transform: translate(-50%, 0%);
 }
 
 @media (min-width: 750px) {
     form {
         width: 70%;
-        left: 15%;
+
     }
 
 }
 
 form div {
     width: 100%;
+}
+
+@media (min-width:960px) {
+    form {
+        width: 50%;
+
+    }
+}
+
+@media (min-width:1200px) {
+    form {
+        width: 40%;
+
+    }
 }
 
 form input {
@@ -753,15 +858,15 @@ form label {
     z-index: 99;
     top: 0px;
     left: 0px;
-    background-color: rgba(128, 128, 128, 0.692);
+    background-color: rgba(0, 0, 0, 0.641);
     display: none;
 }
 
-.day1b,
+/* .day1b,
 .day2b {
     display: none;
-    margin-bottom: 10px;
-}
+    
+} */
 
 .day2b label,
 .lbld2 {
@@ -778,11 +883,56 @@ input[type='radio'] {
     display: none;
 }
 
+
+.day2h,
+.day1h,
+.day1b,
+.day2b {
+    transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+}
+
 #day1:checked~.day1h,
-#day2:checked~.day2h,
-#day1:checked~.day1b,
-#day2:checked~.day2b {
-    display: flex;
+
+#day2:checked~.day2h {
+    transform: translate(0%, 0);
+    -webkit-transform: translate(0%, 0);
+    -moz-transform: translate(0%, 0);
+    -ms-transform: translate(0%, 0);
+    -o-transform: translate(0%, 0);
+}
+
+#day1:checked~.day2b,
+
+#day2:checked~.day1b {
+    display: none;
+}
+
+
+
+.day1b,
+.day2b {
+    bottom: 70px;
+
+}
+
+.day1h {
+    transform: translate(-103%, 0);
+    -webkit-transform: translate(-103%, 0);
+    -moz-transform: translate(-103%, 0);
+    -ms-transform: translate(-103%, 0);
+    -o-transform: translate(-103%, 0);
+}
+
+.day2h {
+    transform: translate(103%, 0);
+    -webkit-transform: translate(103%, 0);
+    -moz-transform: translate(103%, 0);
+    -ms-transform: translate(103%, 0);
+    -o-transform: translate(103%, 0);
 }
 
 .lbld1,
