--- a/css/style.css
+++ b/css/style.css
@@ -569,35 +569,37 @@ h1 {
 
 .register:checked+.frmContainer {
     display: block;
+
+}
+
+.register:checked+.frmContainer form {
     animation: frmanime .4s forwards;
     -webkit-animation: frmanime .4s forwards;
 }
 
-/* .register:checked+.frmContainer form {} */
-
 @keyframes frmanime {
     0% {
-        transform: scale(0.6);
-        -webkit-transform: scale(0.6);
-        -moz-transform: scale(0.6);
-        -ms-transform: scale(0.6);
-        -o-transform: scale(0.6);
+        transform: translate(-50%, 0%) scale(0);
+        -webkit-transform: translate(-50%, 0%) scale(0);
+        -moz-transform: translate(-50%, 0%) scale(0);
+        -ms-transform: translate(-50%, 0%) scale(0);
+        -o-transform: translate(-50%, 0%) scale(0);
     }
 
-    50% {
+    /* 50% {
         transform: scale(1.1);
         -webkit-transform: scale(1.1);
         -moz-transform: scale(1.1);
         -ms-transform: scale(1.1);
         -o-transform: scale(1.1);
-    }
+    } */
 
     100% {
-        transform: scale(1);
-        -webkit-transform: scale(1);
-        -moz-transform: scale(1);
-        -ms-transform: scale(1);
-        -o-transform: scale(1);
+        transform: translate(-50%, 0%) scale(1);
+        -webkit-transform: translate(-50%, 0%) scale(1);
+        -moz-transform: translate(-50%, 0%) scale(1);
+        -ms-transform: translate(-50%, 0%) scale(1);
+        -o-transform: translate(-50%, 0%) scale(1);
     }
 }
 
@@ -920,19 +922,19 @@ input[type='radio'] {
 }
 
 .day1h {
-    transform: translate(-103%, 0);
-    -webkit-transform: translate(-103%, 0);
-    -moz-transform: translate(-103%, 0);
-    -ms-transform: translate(-103%, 0);
-    -o-transform: translate(-103%, 0);
+    transform: translate(-110%, 0);
+    -webkit-transform: translate(-110%, 0);
+    -moz-transform: translate(-110%, 0);
+    -ms-transform: translate(-110%, 0);
+    -o-transform: translate(-110%, 0);
 }
 
 .day2h {
-    transform: translate(103%, 0);
-    -webkit-transform: translate(103%, 0);
-    -moz-transform: translate(103%, 0);
-    -ms-transform: translate(103%, 0);
-    -o-transform: translate(103%, 0);
+    transform: translate(110%, 0);
+    -webkit-transform: translate(110%, 0);
+    -moz-transform: translate(110%, 0);
+    -ms-transform: translate(110%, 0);
+    -o-transform: translate(110%, 0);
 }
 
 .lbld1,
